# OmniScript-automation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  windows-release.yml
apps/desktop/: CMakeLists.txt
apps/desktop/src/: AppShell.cpp  AudioInfoPanel.cpp  BatchPanel.cpp  BenchmarkPanel.cpp  ComparisonPanel.cpp  DashboardWorkspace.cpp  DiagnosticsLogPanel.cpp  EnginePanel.cpp  EnsemblePanel.cpp  FilePickerWaveform.cpp  FrequencyCanvasRuntime.cpp  FrequencyPaintAccess.inc  FrequencyPaintDisplay.inc  FrequencyPaintLoad.inc  FrequencyPaintMouseFinish.inc  FrequencyPaintMouseStart.inc  FrequencyPaintWorkspace.h  FrequencyWorkflow.cpp  GodPanel.cpp  HistoryView.cpp  JobDetailPanel.cpp  JobStatusJson.cpp  JuceApp.cpp  LogStoreImpl.inc  ModelManagerPanel.cpp  ModelsWorkspace.cpp  NoteEditorWorkspace.cpp  PipelineWorkspace.cpp  PipelineWorkspace.h  PipelineWorkspaceLayout.inc  PipelineWorkspaceSubmit.inc  PreferencesPanel.cpp  ProcessingPanel.cpp  ProcessingPanel.h  ProjectStateImpl.inc  RecordPanel.cpp  ResultHooks.cpp  ResultHooks.h  SettingsPersistenceImpl.inc  StemMixerPanel.cpp  (+15 more)
cmake/: Packaging.cmake
docs/: ADVANCED_RUNTIME_IMPLEMENTATION.md  ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_STATUS.md  OMNISTEM_DOCX_COMPLIANCE.md  PRODUCTION_BRANCH_STATUS.md  REPOSITORY_MIGRATION.md
models/catalog/: demucs-cpp-htdemucs-4s-f16.json
packaging/windows/: Apply-Update.ps1  OmniStemStudio.iss  Restore-Rollback.ps1  Validate-Deployment.ps1
protocols/: omnscript-sandbox-policy.json  plugin-host-protocol.json
scripts/examples/: cleanup_and_transcribe.omni.py
services/ai-worker/: advanced_methods.py  agent_runtime.py  api_app.py  api_jobs.py  api_rpc.py  authorized_voice_provider.py  benchmarking.py  cli_support.py  desktop_worker_daemon.py  engine_commands.py  engine_registry.py  engine_runtime.py  executor_methods.py  executor_policy.py  instrument_renderer.py  main.py  mastering_pro.py  mode_planner.py  mode_selection.py  mode_types.py  model_download.py  model_methods.py  model_registry.py  model_service.py  model_service_admin.py  neural_note_engine.py  omnscript_runtime.py  onnx_audio.py  pipeline_runtime.py  plugin_compatibility.py  recording_methods.py  recording_service.py  request_once.py  requirements-ai.txt  requirements-production.txt  requirements.txt  sandbox_broker.py  serve_local.py  spec_catalog.py  spectral_png.py  (+5 more)
services/ai-worker/tests/: test_advanced_security.py  test_api_app.py  test_benchmarking.py  test_desktop_worker_daemon.py  test_dsp_optional.py  test_engine_detection.py  test_engine_integration.py  test_engine_output_names.py  test_mode_execution.py  test_mode_planner.py  test_model_policy.py  test_pipeline_runtime.py  (+6 more)
tools/: model_bundle.py  sign_release.py  update_verifier.py
tools/audio-runtime/: CMakeLists.txt
tools/audio-runtime/src/: ClapRuntime.cpp  ClapRuntime.h
